--- a/templates/index.html
+++ b/templates/index.html
@@ -2,82 +2,558 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garbage Classification</title>
+    <!-- Box Icons -->
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <!-- Link To CSS -->
+    <link rel="stylesheet" href="">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #ADD8E6;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            max-width: 800px;
-        }
-
-        h1 {
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        p {
-            color: #666;
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
         .garbage-photos {
-            overflow: hidden;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
             margin-top: 20px;
         }
 
         .garbage-photos img {
-            width: 100px;
-            height: auto;
-            margin-right: 10px;
-            transition: transform 0.3s ease;
+            width: calc(25% - 10px); /* 25% of container width minus spacing */
+            margin-bottom: 20px;
+            object-fit: cover;
+            border-radius: 10px; /* Slightly curved border */
         }
 
-        .garbage-photos img:hover {
-            transform: scale(1.1);
+        .slide-from-top {
+            position: relative;
+            overflow: hidden;
+            height: 0;
         }
+        .slide-from-top img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            animation: slideIn 1.5s forwards;
+        }
+         @keyframes slideIn {
+            0% {
+                transform: translateY(-100%);
+            }
+            100% {
+                transform: translateY(0);
+            }
+        }
+
+        .upload-button {
+            display: flex;
+            justify-content: center;
+            margin-top: 100px;
+        }
+
+        /* Google Fonts */
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+
+        * {
+            margin: 0;
+            padding: 0;
+            font-family: "Poppins", sans-serif;
+            box-sizing: border-box;
+            scroll-behavior: smooth;
+            scroll-padding-top: 2rem;
+            list-style: none;
+            text-decoration: none;
+        }
+
+        *::selection {
+            background: var(--main-color);
+            color: #fff;
+        }
+
+        :root {
+            --main-color: #ffb411;
+            --text-color: #1e1c2a;
+            --bg-color: #fff;
+            --big-font: 4rem;
+            --h2-font: 2.24rem;
+            --p-font: 0.9rem;
+        }
+
+        section {
+            padding: 50px 10%;
+        }
+
+        body.active {
+            --bg-color: #1e1c2a;
+            --text-color: #fff;
+        }
+
+        body {
+            color: var(--text-color);
+            background: var(--bg-color);
+        }
+
+        #darkmode {
+            font-size: 25px;
+            cursor: pointer;
+        }
+
+        header {
+            position: fixed;
+            width: 100%;
+            top: 0;
+            right: 0;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: var(--bg-color);
+            padding: 18px 100px;
+            box-shadow: 0 0.5rem 50rem rgba(0, 0, 0, 0.1);
+        }
+
+        .logo {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: var(--main-color);
+        }
+
+        .navbar {
+            display: flex;
+        }
+
+        .navbar a {
+            font-size: 1rem;
+            padding: 10px 20px;
+            color: var(--text-color);
+            font-weight: 500;
+        }
+
+        .navbar a:hover {
+            color: var(--main-color);
+        }
+
+        #menu-icon {
+            font-size: 2rem;
+            cursor: pointer;
+            display: none;
+        }
+
+        .home {
+            width: 100%;
+            min-height: 100vh;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            align-items: center;
+            gap: 1.5rem;
+        }
+
+        .home-img img {
+            width: 100%;
+        }
+
+        .home-text h1 {
+            font-size: var(--big-font);
+            color: var(--main-color);
+        }
+
+        .home-text h2 {
+            font-size: var(--h2-font);
+            margin: 1rem 0 1rem;
+        }
+
+        .btn {
+            display: inline-block;
+            background: var(--main-color);
+            padding: 10px 20px;
+            border-radius: 0.5rem;
+            color: #fff;
+        }
+
+        .btn:hover {
+            background: #ffa400;
+        }
+
+        .about {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1.5rem;
+            align-items: center;
+        }
+
+        .about-img img {
+            max-width: 80%;
+            border-radius: 0.5rem;
+        }
+
+        .about-text span {
+            color: var(--main-color);
+            font-weight: 500;
+        }
+
+        .about-text h2 {
+            font-size: var(--h2-font);
+        }
+
+        .about-text p {
+            margin: 0.8rem 0 1.8rem;
+        }
+
+        .heading {
+            text-align: center;
+        }
+
+        .heading span {
+            color: var(--main-color);
+            font-weight: 500;
+        }
+
+        .heading h2 {
+            font-size: var(--h2-font);
+        }
+
+        .menu-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, auto));
+            gap: 1.5rem;
+            align-items: center;
+        }
+
+        .box {
+            position: relative;
+            margin-top: 2rem;
+            height: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-radius: 0.5rem;
+            box-shadow: 0 2px 4px rgb(4 64 54 / 10%);
+            padding: 10px;
+        }
+
+        .box-img {
+            width: 200px;
+            height: 200px;
+        }
+
+        .box-img img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            object-position: center;
+        }
+
+        .box h2 {
+            font-size: 1.2rem;
+        }
+
+        .box h3 {
+            font-size: 1rem;
+            font-weight: 400;
+            margin: 4px 0 10px;
+        }
+
+        .box span {
+            font-size: var(--p-font);
+            font-weight: 500;
+        }
+
+        .box .bx {
+            position: absolute;
+            right: 0;
+            top: 0;
+            font-size: 20px;
+            background: var(--main-color);
+            border-radius: 0 0.5rem 0 0.5rem;
+            padding: 5px 8px;
+        }
+
+        .box .bx:hover {
+            background: #ffa400;
+        }
+
+        @media (max-width: 921px) {
+            header {
+                padding: 14px 41px;
+            }
+
+            :root {
+                --big-font: 3rem;
+                --h2-font: 1.7rem;
+            }
+        }
+
+        @media (max-width: 768px) {
+            section {
+                padding: 50px 8%;
+            }
+
+            #menu-icon {
+                display: initial;
+                color: var(--text-color);
+            }
+
+            header .navbar {
+                position: absolute;
+                top: -400px;
+                left: 0;
+                right: 0;
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                background: var(--bg-color);
+                box-shadow: 0 4px 4px rgb(0 0 0 / 10%);
+                transition: 0.2s ease;
+            }
+
+            .navbar.active {
+                top: 100%;
+            }
+
+            .navbar a {
+                padding: 1.5rem;
+                display: block;
+                background: var(--bg-color);
+            }
+
+            #darkmode {
+                position: absolute;
+                top: 1.4rem;
+                right: 2rem;
+            }
+        }
+
+        @media (max-width: 715px) {
+            header {
+                padding: 10px 16px;
+            }
+
+            .home {
+                grid-template-columns: 1fr;
+            }
+
+            .about {
+                grid-template-columns: 1fr;
+                text-align: center;
+            }
+
+            .about-img {
+                order: 2;
+            }
+        }
+
+        @media (max-width: 515px) {
+            .connect {
+                flex-direction: column;
+            }
+
+            .connect .btn {
+                margin-top: 1rem;
+            }
+        }
+
+        @media (max-width: 450px) {
+            :root {
+                --big-font: 2rem;
+                --h2-font: 1.4rem;
+            }
+
+            .home-text {
+                padding-top: 4rem;
+            }
+        }
+          .services-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between; / Add equal spacing between divisions */
+    }
+
+    .s-box {
+        width: calc(50% - 10px); /* Set width for two divisions to fit in one row with spacing */
+        margin-bottom: 20px; /* Add spacing between rows */
+        border-radius: 10px;
+        overflow: hidden;
+        margin-right:10px;
+    }
+
+    .s-box img {
+        width: 100%;
+        height: auto;
+        border-radius: 10px 10px 0 0;
+    }
+
+    .s-box h3, .s-box p {
+        padding: 10px;
+        margin: 5;
+        background-color: #f0f0f0;
+    }
+         /* Center the third box */
+    @media (min-width: 768px) {
+        .services-container {
+            justify-content: flex-start; /* Align boxes to the left on wider screens */
+        }
+
+        .s-box:nth-child(3) {
+            width: 50%; /* Full width for the third box */
+            height:75%;
+            margin: 0 auto; /* Center the third box */
+        }
+    }
+
     </style>
+
 </head>
 <body>
-    <div class ="container" >
-        <h1>Garbage Classification</h1>
-        <p>Proper garbage disposal is important for maintaining cleanliness and environmental sustainability. Here are some tips for garbage disposal:</p>
-        <ul style="text-align: left;">
-            <li>Separate recyclable and non-recyclable materials.</li>
-            <li>Compost organic waste for use as fertilizer.</li>
-            <li>Avoid littering and dispose of garbage in designated bins.</li>
-            <li>Reduce waste by choosing reusable products and avoiding single-use plastics.</li>
+    <!-- Navbar -->
+    <header>
+        <a href="#" class="logo">Garbage Classification</a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <ul class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Service</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <!-- Dark Mode -->
+            <div class="bx bx-moon" id="darkmode"></div>
         </ul>
+    </header>
+    <!-- Home Section -->
+    <section class="home" id="home">
+        <div class="home-text">
+            <h1>Garbage Classification</h1>
+            <h2>Proper waste management for a cleaner environment</h2>
+            <a href="#garbage-photos" class="btn">Classify</a>
+        </div>
+        <div class="home-img ">
+            <img src="https://i.ibb.co/0qFYyjs/i-Stock-497544446.jpg" alt="">
+        </div>
+    </section>
+
+    <!-- About -->
+    <section class="about" id="about">
+        <div class="about-text">
+            <span>About Garbage Classification</span>
+            <h2>We promote proper waste disposal</h2>
+            <p>Garbage classification is essential for maintaining cleanliness and environmental sustainability. We encourage separating recyclable and non-recyclable materials, composting organic waste, and reducing single-use plastics.</p>
+            <a href="#" class="btn">Learn More</a>
+        </div>
+        <!-- About content -->
+    </section>
+
+    <!-- Service -->
+    <section class="services" id="services">
+          <div class="heading">
+            <span>Services</span>
+            <h2>We provide best waste management services</h2>
+        </div>
+        <div class="services-container">
+    <!-- Box 1 -->
+    <div class="s-box">
+        <img src="https://i.ibb.co/rM0YsgH/00india-trash-1-super-Jumbo.jpg" alt="">
+        <h3>You Sort</h3>
+        <p>Sort your garbage into recyclable and non-recyclable categories.</p>
+    </div>
+
+    <!-- Box 2 -->
+    <div class="s-box">
+        <img src="https://images.pexels.com/photos/9090142/pexels-photo-9090142.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1." alt="">
+        <h3>We Collect</h3>
+        <p>We collect your garbage and ensure proper disposal.</p>
+    </div>
+
+    <!-- Box 3 -->
+    <div class="s-box">
+        <img src="https://images.pexels.com/photos/10368942/pexels-photo-10368942.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" >
+        <h3>We Dispose</h3>
+        <p>We dispose of waste responsibly, promoting environmental sustainability.</p>
+    </div>
+</div>
+    </section>
+
+    <!-- Connect -->
+    <section class="connect">
+         <div class="connect-text">
+            <span>Let's Talk</span>
+            <h2>Connect now for proper waste management</h2>
+        </div>
+        <a href="#" class="btn">Contact Us</a>
+        <!-- Connect content -->
+    </section>
+
+    <!-- Contact -->
+    <section class="contact" id="contact">
+
+        <!-- Contact content -->
+    </section>
+
+    <!-- Garbage Photos -->
+    <section class="garbage-photos" id="garbage-photos">
         <div class="garbage-photos">
             <img src="https://i.ibb.co/NnJ9ZnM/jon-moore-1-Px-Gp8kk-Qyk-unsplash.jpg" alt="Cardboard" width="100">
             <img src="https://i.ibb.co/ykpwtcp/markus-spiske-f-Dvok-Tkw-EZ8-unsplash.jpg" alt="Compost">
-            <img src="https://i.pinimg.com/564x/99/0a/dd/990add6d36726ba669110982857c4624.jpg" alt="Glass">
+            <img src="https://images.pexels.com/photos/4042772/pexels-photo-4042772.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Glass">
             <img src="https://i.ibb.co/s9D886Q/pavel-neznanov-w95-Fb7-EEcj-E-unsplash.jpg" alt="Metal">
             <img src="https://i.ibb.co/9bx9F5y/michael-dziedzic-f-Tdn-RCp-RTd-E-unsplash.jpg" alt="Paper">
             <img src="https://i.ibb.co/Ln4wM9h/erik-mclean-Gj-Cx5-Khul-ZI-unsplash.jpg" alt="Plastic">
             <img src="https://i.ibb.co/09XvNdt/evgeny-karchevsky-k1t-Uxfs8-JYY-unsplash.jpg" alt="Trash">
         </div>
+
         <form action="/predict" method="post" enctype="multipart/form-data">
             <h2>Upload an Image</h2>
             <input type="file" name="image">
             <br>
             <input type="submit" value="Upload">
         </form>
+    </section>
+
+    <!-- Copyright -->
+    <div class="copyright">
+        <p>© Garbage Classification. All Rights Reserved.</p>
     </div>
+
+    <!-- Scroll Reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+
+  let menu = document.querySelector('#menu-icon');
+  let navbar = document.querySelector('.navbar');
+
+  menu.onclick = () => {
+      navbar.classList.toggle('active');
+  }
+
+  window.onscroll = () => {
+      navbar.classList.remove('active');
+  }
+  // Dark Mode
+  let darkmode = document.querySelector('#darkmode');
+
+  darkmode.onclick = () => {
+      if(darkmode.classList.contains('bx-moon')){
+          darkmode.classList.replace('bx-moon','bx-sun');
+          document.body.classList.add('active');
+      }else{
+          darkmode.classList.replace('bx-sun','bx-moon');
+          document.body.classList.remove('active');
+      }
+  }
+
+  // Scroll Reveal
+  const sr = ScrollReveal ({
+      origin: 'top',
+      distance: '40px',
+      duration: 2000,
+      reset: true
+  });
+document.addEventListener('DOMContentLoaded', function() {
+          sr.reveal(`.home-text, .home-img,
+              .about-img, .about-text,
+              .box, .s-box,
+              .btn, .connect-text,
+              .contact-box`, {
+      interval: 200
+  })
+    </script>
 </body>
 </html>
